--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -469,7 +469,16 @@ body {
     padding: 24px;
     overflow-x: auto;
 }
-
+#content main .table-data .order table tr td .status.confirmed {
+	background: #00b894;
+	
+}
+#content main .table-data .order table tr td .status.canceled {
+	background: var(--red);
+}
+#content main .table-data .order table tr td .status.pending {
+	background: var(--orange);
+}
 #content main .table-data .head {
     display: flex;
     align-items: center;
